--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <header>
         <nav class="navbar">
             <div class="left-side">
-                <img src="images/Dunder_Mifflin%2C_Inc_Long.jpg" alt="Dunder Mifflin Paper Company logo" class="logo">
+                <p>The LANDING Zone</p>
             </div>
             <div class="right-side">
                 <ul>
                     <li><a href="">About</a></li>
-                    <li><a href="">Order</a></li>
+                    <li><a href="">Quotes</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>                
             </div>
@@ -25,47 +25,46 @@
         
         <div class="hero">
             <div class="left-side">
-                <h1 class="hero-main">Dunder Mifflin</h1>
-                <p class="hero-info">Committed to providing its customers quality office and information technology products, furniture, printing values and the experience required for making informed buyer decisions.</p>
+                <h1 class="hero-main">The #1 Stop for Landing</h1>
+                <p class="hero-info">Welcome to Landing Page. Committed to being your main resource for landing.</p>
                 <button class="hero-info">Sign up for our Newsletter</button>
             </div>
             <div class="right-side">
                 <div class="hero-image">
-                    <img class="company-logo" src="/images/staff.jpg" alt="">
+                    <img class="company-logo" src="/images/pexels-photo-230976.jpeg" alt="a landing strip">
                 </div>
             </div>
         </div>
     </header>
 
     <main>
-        <h2>Meet the team:</h2>
+        <h2>About Us:</h2>
         <div class="main-info hero-info">
             <div class="info-space">
-                <img src="/images/MichaelScott.png" alt="Michael Scott" class="team-member">
-                <p>Michael Scott - Regional Manager</p>
+                <img src="/images/pexels-photo-3768652.jpg" alt="plane taking off from a runway" class="landing">
+                <p>Offering the finest takeoff experience for our valued customers.</p>
             </div>
             <div class="info-space">
-                <img src="/images/dwight.jpg" alt="Michael Scott" class="team-member">
-                <p>Dwight Schrute - Head Salesman </p>
+                <img src="/images/delivery.jpeg" alt="helicopter dropping off a package" class="landing">
+                <p>Providing quick and timely deliveries across the continental United States.</p>
             </div>
             <div class="info-space">
-                <img src="/images/jim-halpert.jpg" alt="Michael Scott" class="team-member">
-                <p>Jim Halpert - Sales Representative</p>
+                <img src="/images/greenland.jpeg" alt="plane landing in a grassy area" class="landing">
+                <p>Diverse landing zones for your sight-seeing needs!</p>
             </div>
         </div>
     </main>
 
     <div class="quote">
-        <em>YOU MISS 100% OF THE SHOTS YOU DON'T TAKE.</em>
-        <p class="wayne">- Wayne Gretzky</p>
-        <p>- Michael Scott</p>
+        <em>If you can walk away from a landing, it’s a good landing. If you can use the aircraft the next day, it’s an outstanding landing.</em>
+        <p>- Chuck Yaeger</p>
     </div>
 
     <div class="sign-up">
         <div class="container">
             <div class="left-side">
-                <strong>Don't miss out on our deals!</strong>
-                <p>Sign up for our products by clicking that button right over there!</p>
+                <strong>Don't miss out on our landing deals!</strong>
+                <p>Sign up for our services by clicking that button right over there!</p>
             </div>
             <div class="right-side">
                 <button class="hero-info">Sign up</button>
